<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar_menu_gradient"
    tools:context=".view.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:weightSum="6"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/countryName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1.6"
                android:textColor="#212121"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/country" />

            <View
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:background="#000" />

            <TextView
                android:id="@+id/totalCases"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1.2"
                android:textColor="#212121"
                android:fontFamily="@font/montserrat_extra_bold"
                android:text="@string/total_cases" />

            <View
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:background="#000" />

            <TextView
                android:id="@+id/newCases"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="#212121"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/new_cases" />

            <View
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:background="#000" />

            <TextView
                android:id="@+id/totalDeaths"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1.2"
                android:textColor="#212121"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/total_deaths" />

            <View
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:background="#000" />

            <TextView
                android:id="@+id/newDeaths"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="#212121"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/new_deaths" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/countriesList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/list_error"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/error_for_data"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_extra_bold"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="8dp"/>

        <com.tuyenmonkey.mkloader.MKLoader
            android:id="@+id/loading_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyle"
            app:mk_color="@color/deepSkyBlue"
            app:mk_type="TwinFishesSpinner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>